# Sortout

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
