[package]
name = "sortout"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.14.0"
slint = "1.4.1"
trash = "4.1.0"
array-init = "0.1"

[build-dependencies]
slint-build = "1.4.1"